<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editTextNumber"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="167dp"
        android:layout_height="58dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editTextNumber3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="124dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickButton"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="242dp"
        android:layout_height="237dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.202">

        <RadioButton
            android:id="@+id/sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton" />

        <RadioButton
            android:id="@+id/restar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton3" />

        <RadioButton
            android:id="@+id/dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton4" />

        <RadioButton
            android:id="@+id/mod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton5" />

        <RadioButton
            android:id="@+id/potencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton6" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>